некоторые изменение по комментарию из проверки

--- a/index.html
+++ b/index.html
@@ -27,22 +27,19 @@
             <article class="page-content-article-about_your_product">
                 <div class="page-content-article-about_your_product-wrp">
                     <h2 class="page-content-article-about_your_product-title heading-2">About your product</h2>
-                    <section class="page-content-article-about_your_product-section">
-                        <p class="page-content-article-about_your_product-section-text text">Lorem ipsum dolor sit
-                            amet,
-                            consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus
-                            eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam
-                            sapiente
-                            ut ipsum.
-                        </p>
-                    </section>
-                    <section class="page-content-article-about_your_product-section">
-                        <p class="page-content-article-about_your_product-section-text text">Pariatur iure ab sunt
-                            nesciunt,
-                            quibusdam odio iste cumque itaque, ipsa vel exercitationem
-                            ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde
-                            perferendis nemo debitis dolor.</p>
-                    </section>
+                    <p class="page-content-article-about_your_product-section-text text">Lorem ipsum dolor sit
+                        amet,
+                        consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus
+                        eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam
+                        sapiente
+                        ut ipsum.
+                    </p>
+                    <p class="page-content-article-about_your_product-section-text text">Pariatur iure ab sunt
+                        nesciunt,
+                        quibusdam odio iste cumque itaque, ipsa vel exercitationem
+                        ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde
+                        perferendis nemo debitis dolor.
+                    </p>
                 </div>
                 <img class="page-content-article-img" src="#" alt="фото товара" height="245">
             </article>
@@ -113,9 +110,8 @@
                 <div class="page-content-section-screenshots-figure-right-left">
                     <div class="page-content-section-screenshots-figure-right">
                         <figure class="page-content-section-screenshots-figure">
-                            <p class="page-content-section-screenshots-figure-p-img"><img
-                                    class="page-content-section-screenshots-figure-img" src="#" alt="screnshoot"
-                                    height="150"></p>
+                            <img class="page-content-section-screenshots-figure-img" src="#" alt="screnshoot"
+                                width="200" height="150"></p>
                             <figcaption class="right">
                                 <h3 class="page-content-section-screenshots-figure-title">The description for the
                                     image
@@ -129,9 +125,8 @@
                             </figcaption>
                         </figure>
                         <figure class="page-content-section-screenshots-figure">
-                            <p class="page-content-section-screenshots-figure-p-img"><img
-                                    class="page-content-section-screenshots-figure-img" src="#" alt="screnshoot"
-                                    height="150"></p>
+                            <img class="page-content-section-screenshots-figure-img" src="#" alt="screnshoot"
+                                width="200" height="150"></p>
                             <figcaption class="right">
                                 <h3 class="page-content-section-screenshots-figure-title">The description for the
                                     image
@@ -147,9 +142,8 @@
                     </div>
                     <div class="page-content-section-screenshots-figure-left">
                         <figure class="page-content-section-screenshots-figure">
-                            <p class="page-content-section-screenshots-figure-p-img"><img
-                                    class="page-content-section-screenshots-figure-img" src="#" alt="screnshoot"
-                                    height="150"></p>
+                            <img class="page-content-section-screenshots-figure-img" src="#" alt="screnshoot"
+                                width="200" height="150"></p>
                             <figcaption class="right">
                                 <h3 class="page-content-section-screenshots-figure-title">The description for the
                                     image
@@ -163,9 +157,8 @@
                             </figcaption>
                         </figure>
                         <figure class="page-content-section-screenshots-figure">
-                            <p class="page-content-section-screenshots-figure-p-img"><img
-                                    class="page-content-section-screenshots-figure-img" src="#" alt="screnshoot"
-                                    height="150"></p>
+                            <img class="page-content-section-screenshots-figure-img" src="#" alt="screnshoot"
+                                width="200" height="150"></p>
                             <figcaption class="right">
                                 <h3 class="page-content-section-screenshots-figure-title">The description for the
                                     image
