попытка исправить все в dignity and pluses

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <header class="page-header">
+        <!-- <header class="page-header">
             <div class="page-header-wrp">
                 <h1 class="page-header-title">Product name</h1>
                 <ul class="page-header-list">
@@ -22,10 +22,10 @@
                 </ul>
             </div>
             <img class="page-header-pic" src="#" alt="фото товара" height="214">
-        </header>
+        </header> -->
 
         <main>
-            <article class="page-content-article-about_your_product">
+            <!-- <article class="page-content-article-about_your_product">
                 <div class="page-content-article-about_your_product-wrp">
                     <h2 class="page-content-article-about_your_product-title heading-2">About your product</h2>
                     <p class="page-content-article-about_your_product-section-text text">Lorem ipsum dolor sit
@@ -43,70 +43,46 @@
                     </p>
                 </div>
                 <img class="page-content-article-img" src="#" alt="фото товара" height="245">
-            </article>
+            </article> -->
             <section class="page-content-section-dignity_and_pluses">
                 <h2 class="page-content-section-dignity_and_pluses-title heading-2">Dignity and pluses product</h2>
-                <div class="page-content-section-dignity_and_pluses-desc-left-right">
-                    <div class="page-content-section-dignity_and_pluses-desc-right">
-                        <details class="page-content-section-dignity_and_pluses-details">
-                            <summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit
-                                iure
-                                placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-                                maxime,
-                                quaerat
-                                porro totam, dolore minus inventore.</summary>
-                            Something small enough to escape casual notice.
-                        </details>
-                        <details class="page-content-section-dignity_and_pluses-details">
-                            <summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit
-                                iure
-                                placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-                                maxime, quaerat
-                                porro totam, dolore minus inventore.</summary>
-                            Something small enough to escape casual notice.
-                        </details>
-                        <details class="page-content-section-dignity_and_pluses-details">
-                            <summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit
-                                iure
-                                placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-                                maxime,
-                                quaerat
-                                porro totam, dolore minus inventore.</summary>
-                            Something small enough to escape casual notice.
-                        </details>
-                    </div>
-                    <div class="page-content-section-dignity_and_pluses-desc-left">
-                        <details class="page-content-section-dignity_and_pluses-details">
-                            <summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit
-                                iure
-                                placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-                                maxime,
-                                quaerat
-                                porro totam, dolore minus inventore.</summary>
-                            Something small enough to escape casual notice.
-                        </details>
-                        <details class="page-content-section-dignity_and_pluses-details">
-                            <summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit
-                                iure
-                                placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-                                maxime,
-                                quaerat
-                                porro totam, dolore minus inventore.</summary>
-                            Something small enough to escape casual notice.
-                        </details>
-                        <details class="page-content-section-dignity_and_pluses-details">
-                            <summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit
-                                iure
-                                placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-                                maxime,
-                                quaerat
-                                porro totam, dolore minus inventore.</summary>
-                            Something small enough to escape casual notice.
-                        </details>
-                    </div>
+                <div class="page-content-section-dignity-and-pluses-column">
+                    <ul class="page-content-section-dignity-and-pluses-the-lists">
+                        <li class="page-content-section-dignity-and-pluses-the-lists-item">Delectus dolorem vero quae
+                            beatae quasi dolor deserunt iste amet atque, impedit iure
+                            placeat,
+                            ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro
+                            totam, dolore minus inventore.</li>
+                        <li class="page-content-section-dignity-and-pluses-the-lists-item">Delectus dolorem vero quae
+                            beatae quasi dolor deserunt iste amet atque, impedit iure
+                            placeat,
+                            ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro
+                            totam, dolore minus inventore.</li>
+                        <li class="page-content-section-dignity-and-pluses-the-lists-item">Delectus dolorem vero quae
+                            beatae quasi dolor deserunt iste amet atque, impedit iure
+                            placeat,
+                            ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro
+                            totam, dolore minus inventore.</li>
+                    </ul>
+                    <ul class="page-content-section-dignity-and-pluses-the-lists">
+                        <li class="page-content-section-dignity-and-pluses-the-lists-item">Delectus dolorem vero quae
+                            beatae quasi dolor deserunt iste amet atque, impedit iure
+                            placeat,
+                            ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro
+                            totam, dolore minus inventore.</li>
+                        <li class="page-content-section-dignity-and-pluses-the-lists-item">Delectus dolorem vero quae
+                            beatae quasi dolor deserunt iste amet atque, impedit iure
+                            placeat,
+                            ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro
+                            totam, dolore minus inventore.</li>
+                        <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure
+                            placeat,
+                            ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro
+                            totam, dolore minus inventore.</li>
+                    </ul>
                 </div>
             </section>
-            <section class="page-content-section-screenshots">
+            <!-- <section class="page-content-section-screenshots">
                 <h2 class="page-content-section-screenshots-title heading-2">Screenshots</h2>
                 <div class="page-content-section-screenshots-figure-right-left">
                     <div class="page-content-section-screenshots-figure-right">
@@ -174,7 +150,7 @@
                         </figure>
                     </div>
                 </div>
-            </section>
+            </section> -->
         </main>
         <footer>
         </footer>
